6847
I forgot to past the first error message, sorry it was late ...

{code}
scala> val var = 6;
<console>:1: error: illegal start of simple pattern
       val var = 6;
           ^
<console>:1: error: '=' expected but ';' found.
       val var = 6;
                  ^
{code}


I'm not sure this bug makes sense that way anymore, should I close it?
(Well, it could be argued that the second error shouldn't be shown or that "illegal start of simple pattern" isn't easily understandable by beginners ...)

Sorry for the spam. :-(
